tests/positive/exceptions/uncaught/input.ci
void main() {
    assert(false, "fatal");
}
