tests/negative/semantic/void_function_returns_value/input.ci
void f() {
    return 1;
}

void main() {
    f();
}
